@@ -60,6 +60,8 @@ GType vips_angle_get_type (void) G_GNUC_CONST;
 #define VIPS_TYPE_ANGLE (vips_angle_get_type())
 GType vips_angle45_get_type (void) G_GNUC_CONST;
 #define VIPS_TYPE_ANGLE45 (vips_angle45_get_type())
+GType vips_interesting_get_type (void) G_GNUC_CONST;
+#define VIPS_TYPE_INTERESTING (vips_interesting_get_type())
 /* enumerations from "../../../libvips/include/vips/util.h" */
 GType vips_token_get_type (void) G_GNUC_CONST;
 #define VIPS_TYPE_TOKEN (vips_token_get_type())
